--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,13 @@
     </div>
     </mat-toolbar>
   
-    <mat-sidenav-container class="example-sidenav-container"
+    <mat-sidenav-container color="primary" class="example-sidenav-container"
                            [style.marginTop.px]="0">
       <mat-sidenav #snav [mode]="'side'" 
                    fixedTopGap="56">
         <mat-nav-list class="dark-theme">
           <h1 matSubheader>Subheader</h1>
-            <a mat-list-item>Link</a>
+            <a mat-list-item href="google.com">Link</a>
           
         </mat-nav-list>
       </mat-sidenav>
