--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
   <div class="example-container">
-    <mat-toolbar color="primary" class="example-toolbar">
+    <!-- <mat-toolbar color="primary" class="example-toolbar">
         <div class="toolbar-container">
       <button mat-flat-button color="pirmary" (click)="snav.toggle()"><mat-icon aria-hidden="false" aria-label="menu icon" fontIcon="menu"></mat-icon>
         Menu</button>
@@ -18,10 +18,10 @@
         </mat-nav-list>
       </mat-sidenav>
   
-      <mat-sidenav-content>
+      <mat-sidenav-content> -->
         <router-outlet></router-outlet>
-      </mat-sidenav-content>
-    </mat-sidenav-container>
-    <app-footer></app-footer>
+      <!-- </mat-sidenav-content>
+    </mat-sidenav-container> -->
+    <!-- <app-footer></app-footer> -->
   </div>
 
